--- a/doc/html/mkdoc.css
+++ b/doc/html/mkdoc.css
@@ -22,12 +22,18 @@ html,body {
   padding: 7px 15px;
   float: right;
   background: #e8f0ff;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: #d0e0ff;
 }
 
 .nestlinks {
   padding: 7px 15px;
-  background: #e8f0ff;
   color: #203080;
+  background: #e8f0ff;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: #d0e0ff;
 }
 
 .headlinks {
@@ -39,7 +45,6 @@ html,body {
 .headlinks a:link, .headlinks a:visited {
   color: white;
 }
-
 
 .head {
   display: block;
@@ -70,18 +75,20 @@ html,body {
   font-size: 80%;
   position: relative;
   margin-top: -60px;
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-top-color: #d0e0ff;
 }
 
 /*********** misc */
 
-a:link {
+a:link, a:visited {
   text-decoration: none;
   color: #203080;
 }
 
-a:visited {
-  text-decoration: none;
-  color: #203080;
+.ext_link a:link, .ext_link a:visited {
+  color: #206080;
 }
 
 ul {
@@ -110,10 +117,11 @@ hr {
   font-family: monospace;
 }
 
-.divtextcontent {
+.sec_content2, .sec_content3, .sec_content4,
+.sec_content5, .sec_content6 {
   display: block;
   padding: 0px 30px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 /*********** titles */
@@ -162,7 +170,7 @@ div.sec_shown {
 .table_frame {
   text-align: center;
   font-size: 10pt;
-  margin: 20px 30px;
+  margin: 20px 0px;
 }
 
 .table td {
@@ -198,6 +206,122 @@ div.sec_shown {
   margin: 20px 30px;
 }
 
+/*********** tree */
+
+.tree_frame {
+  display: block;
+  padding: 0px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tree_default, .tree_public, .tree_protected,
+.tree_private, .tree_inaccessible, .tree_this,
+.tree_derived {
+  height: 100%;
+  min-height: 100%;
+  border-radius: 8px;
+ -moz-border-radius: 8px;
+  padding: 2px 0px 0px 0px;
+  display:inline-block;
+  vertical-align: middle;
+  text-align: center;
+  border-width:      1px;
+  margin:       0px -1px;
+}
+
+.tree_row {
+  padding: 0px;
+  margin: 0px;
+  display:inline-block;
+}
+
+.tree_default, .tree_public {
+  border: solid;
+  border-color: #b8c8f8;
+  background: #e8f0ff;
+  border-width:      1px;
+  margin:       0px -1px;
+}
+
+.tree_protected {
+  border: solid;
+  border-color: #e0d0a0;
+  background: #ffffd0;
+  border-width:      1px;
+  margin:       0px -1px;
+}
+
+.tree_private {
+  border: solid;
+  border-color: #e0a0a0;
+  background: #ffe8e8;
+  border-width:      1px;
+  margin:       0px -1px;
+}
+
+.tree_inaccessible {
+  border: dashed;
+  border-color: #e0a0a0;
+  background: white;
+  border-width:      1px;
+  margin:       0px -1px;
+}
+
+.tree_derived {
+  border: solid;
+  border-color: #d0d0d0;
+  background: #f8f8f8;
+  border-width:      1px;
+  margin:       0px -1px;
+}
+
+.tree_this {
+  border: solid;
+  border-width:      2px;
+  margin:       0px -2px;
+  border-color: #4080e0;
+  background: #f8f8ff;
+}
+
+.tree_connect_1, .tree_connect_2,
+.tree_connect_3, .tree_connect_4 {
+  height:16px; 
+  padding: 0px;
+  display:inline-block;
+  vertical-align: middle;
+  font-size: 60%;
+}
+
+.tree_connect_1, .tree_connect_2,
+.tree_connect_3 {
+  border: solid;
+  border-color: gray;
+  border-style: dashed;
+}
+
+.tree_connect_1 {
+  border-width: 0px 1px 0px 0px;
+  margin: 0px -1px 0px 0px;
+}
+
+.tree_connect_2 {
+  border-width: 1px 1px 0px 0px;
+  margin: -1px -1px 0px 0px;
+}
+
+.tree_connect_3 {
+  border-width: 0px 1px 1px 0px;
+  margin: 0px -1px -1px 0px;
+}
+
+.tree_pad {
+  vertical-align: middle;
+  display:inline-block;
+  padding: 0px;
+  margin: 0px;
+}
+
 /*********** code */
 
 .codebox {
@@ -206,7 +330,7 @@ div.sec_shown {
   border-color: #c0d0ff;
   background: #e8f0ff;
   padding: 15px;
-  margin: 5px 30px;
+  margin: 5px 0px;
 }
 
 .codedecl {
@@ -225,6 +349,10 @@ div.sec_shown {
 
 .codekw {
   color: #00b0b0;
+}
+
+.codetype {
+  color: #00b000;
 }
 
 .codestr {
@@ -250,6 +378,7 @@ div.sec_shown {
   border-radius: 0px 0px 8px 8px;
   -moz-border-radius: 0px 0px 8px 8px ;
   padding: 2px 10px;
+  margin-top: 40px;
 }
 
 .public_member {
@@ -302,7 +431,7 @@ div.sec_shown {
     min-width: 230px;
 }
 
-.member_short {
+.decl_short_desc {
   color: gray;
   font-style: italic;
   display: block;
